isAgreedPersonalAgreement flag removed
