# jibrel/investment/serializer.py
@@ -3,7 +3,6 @@ from rest_framework import serializers
 
 from django_banking.api.serializers import AssetSerializer
 from jibrel.campaigns.serializers import OfferingSerializer
-from jibrel.core.errors import ValidationError
 from jibrel.core.rest_framework import AlwaysTrueFieldValidator
 from jibrel.investment.models import (
     InvestmentApplication,
@@ -16,25 +15,9 @@ class CreateInvestmentApplicationSerializer(serializers.ModelSerializer):
     isAgreedSubscription = serializers.BooleanField(
         source='is_agreed_subscription', validators=[AlwaysTrueFieldValidator()]
     )
-    isAgreedPersonalAgreement = serializers.NullBooleanField(source='is_agreed_personal_agreement')
-
-    def __init__(self, offering, *args, **kwargs):
-        super().__init__(*args, **kwargs)
-        self.offering = offering
-
-    def validate_isAgreedPersonalAgreement(self, value):
-        qs = PersonalAgreement.objects.filter(
-            offering=self.offering,
-            user=self.context['request'].user
-        )
-        if qs.exists() and value is not True:
-            raise ValidationError('You must agree your personal agreements')
-        return value
 
     @transaction.atomic
     def create(self, validated_data):
-        validated_data['offering'] = self.offering
-        validated_data.pop('is_agreed_personal_agreement')
         instance = super().create(validated_data)
         PersonalAgreement.objects.filter(
             offering=instance.offering,
@@ -47,8 +30,7 @@ class CreateInvestmentApplicationSerializer(serializers.ModelSerializer):
         fields = (
             'amount',
             'isAgreedRisks',
-            'isAgreedSubscription',
-            'isAgreedPersonalAgreement'
+            'isAgreedSubscription'
         )
 
 
@@ -66,7 +48,6 @@ class InvestmentApplicationSerializer(CreateInvestmentApplicationSerializer):
             'amount',
             'isAgreedRisks',
             'isAgreedSubscription',
-            'isAgreedPersonalAgreement',
             'status',
             'offering',
             'asset',
